# ctrl

./: .gitignore  Cargo.toml  README.md  README_COMPONENTS.md
crates/ctrl-components/: Cargo.toml
crates/ctrl-components/assets/: affix.css  alert.css  anchor.css  animated_list.css  aspect_ratio.css  aurora_background.css  auto_complete.css  avatar_group.css  backtop.css  badge.css  bento_grid.css  border_beam.css  button.css  calendar.css  card.css  carousel.css  cascader.css  checkbox.css  circular_progress.css  code_block.css  collapse.css  color_picker.css  color_swatch.css  command.css  confetti.css  context_menu.css  copy_button.css  countdown.css  date-picker.css  descriptions.css  dialog.css  divider.css  dot_pattern.css  drawer.css  dropdown.css  empty.css  flip_card.css  float_button.css  form.css  gradient_text.css  (+63 more)
crates/ctrl-components/src/: lib.rs  overlay.rs
crates/ctrl-components/src/affix/: affix.rs  mod.rs
crates/ctrl-components/src/alert/: alert.rs  mod.rs
crates/ctrl-components/src/anchor/: anchor.rs  mod.rs
crates/ctrl-components/src/animated_list/: animated_list.rs  mod.rs
crates/ctrl-components/src/aspect_ratio/: aspect_ratio.rs  mod.rs
crates/ctrl-components/src/aurora_background/: aurora_background.rs  mod.rs
crates/ctrl-components/src/auto_complete/: auto_complete.rs  mod.rs
crates/ctrl-components/src/avatar/: avatar.rs  mod.rs
crates/ctrl-components/src/avatar_group/: avatar_group.rs  mod.rs
crates/ctrl-components/src/kbd/: kbd.rs  (+1 more)
examples/docs-site/: Cargo.toml  Dioxus.toml  index.html
examples/docs-site/src/: main.rs
(+365 files in other folders)
