[workspace]
resolver = "2"
members = [
    "crates/ctrl-core",
    "crates/ctrl-components",
    "crates/ctrl",
    "examples/demo",
    "examples/docs-site",
]

[workspace.dependencies]
dioxus = { version = "0.7", features = ["web"] }
gloo-timers = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "DomRect",
    "ScrollToOptions",
    "ScrollBehavior",
    "console",
    "MouseEvent",
    "TouchEvent",
    "HtmlInputElement",
    "FileList",
    "KeyboardEvent",
    "EventTarget",
    "HtmlElement",
] }